--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,11 @@ input[type=checkbox], input[type=radio] {
     padding: 12px 0 12px;
     margin-bottom: 15px;
     position: fixed;
-    width: calc(100% - 276px);
+    /*width: calc(100% - 276px);*/
+    width: 100%;
     z-index: 1;
+    top: 0;
+    left:0;
 }
 .container-fluid.inner {
     padding-top: 115px;
@@ -147,14 +150,15 @@ input[type=checkbox], input[type=radio] {
     position: fixed;
     left: 0;
     top: 0;
+    z-index: 10;
 }
-.main-container {
+.main-container,.header {
     padding-left: 276px;
 }
 .navtop {
     width: 100%;
     height: 124px;
-    padding: 40px 0 0 34px;
+    padding: 36px 0 0 24px;
 }
 .my-nav {
     list-style: none;
